Bug 11550 - pnp: Huge number of "io resource overlap" messages
Summary: pnp: Huge number of "io resource overlap" messages
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: PNP (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Adam Belay
URL:
Keywords:
Depends on:
Blocks: Regressions-2.6.26
  Show dependency tree
 
Reported: 2008-09-12 11:16 UTC by Rafael J. Wysocki
Modified: 2009-03-07 17:18 UTC (History)
2 users (show)

See Also:
Kernel Version: commit 999ed65ad12e374d7445fbc13f5a1d146ae4b0da
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2008-09-12 11:16:06 UTC
Subject    : [bisected][resend] pnp: Huge number of "io resource overlap" messages
Submitter  : Frans Pop <elendil@planet.nl>
Date       : 2008-09-09 10:50
References : http://marc.info/?l=linux-kernel&m=122095745403793&w=4
Handled-By : Rene Herman <rene.herman@keyaccess.nl>
Handled-By : Bjorn Helgaas <bjorn.helgaas@hp.com>
Patch      : http://marc.info/?l=linux-kernel&m=122098498125536&w=4

This entry is being used for tracking a regression from 2.6.26.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Rafael J. Wysocki 2008-09-14 17:16:19 UTC
On Saturday, 13 of September 2008, Rene Herman wrote:
> On 12-09-08 21:06, Rafael J. Wysocki wrote:
> 
> > This message has been generated automatically as a part of a report
> > of recent regressions.
> > 
> > The following bug entry is on the current list of known regressions
> > from 2.6.26.  Please verify if it still should be listed and let me know
> > (either way).
> > 
> > 
> > Bug-Entry   : http://bugzilla.kernel.org/show_bug.cgi?id=11550
> > Subject             : pnp: Huge number of "io resource overlap" messages
> > Submitter   : Frans Pop <elendil@planet.nl>
> > Date                : 2008-09-09 10:50 (4 days old)
> > References  : http://marc.info/?l=linux-kernel&m=122095745403793&w=4
> > Handled-By  : Rene Herman <rene.herman@keyaccess.nl>
> >               Bjorn Helgaas <bjorn.helgaas@hp.com>
> > Patch               :
> http://marc.info/?l=linux-kernel&m=122098498125536&w=4
> 
> It should be. The patch listed should be good as far as I'm concerned 
> but needs to be pushed by Bjorn as PnP mainatainer. Generally speaking 0 
> wouldn't be a _very_ necesarily invalid value it seems so it's maybe not 
> very nice.
> 
> If someone wants a changelog though, this should do:
> 
> ===
> PNP: avoid checking unitialized BARs for conflicts
> 
> Avoid checking a PCI BAR for conflicts if the BIOS left it unitialized.
> 
> Reported-by: Frans Pop <elendil@planet.nl>
> Signed-off-by: Rene Herman <rene.herman@gmail.com>
> ===
> 
> (Frans: Tested-by?)
Comment 3 Rafael J. Wysocki 2008-09-29 12:54:45 UTC
Handled-By : Stephen D. Smalley <sds@tycho.nsa.gov>
Patch : http://lkml.org/lkml/2008/9/29/168
Comment 4 Rafael J. Wysocki 2008-09-29 14:47:09 UTC
Not-Handled-By : Stephen D. Smalley <sds@tycho.nsa.gov>
Ignore-Patch : http://lkml.org/lkml/2008/9/29/168
Comment 5 Rafael J. Wysocki 2008-10-08 02:05:16 UTC
On Wednesday, 8 of October 2008, Frans Pop wrote:
> On Saturday 04 October 2008, Rafael J. Wysocki wrote:
> > The following bug entry is on the current list of known regressions
> > from 2.6.26.  Please verify if it still should be listed and let me
> > know (either way).
> >
> >
> > Bug-Entry   : http://bugzilla.kernel.org/show_bug.cgi?id=11550
> > Subject     : pnp: Huge number of "io resource overlap" messages
> > Submitter   : Frans Pop <elendil@planet.nl>
> > Date                : 2008-09-09 10:50 (26 days old)
> > References  : http://marc.info/?l=linux-kernel&m=122095745403793&w=4
> > Handled-By  : Rene Herman <rene.herman@keyaccess.nl>
> >               Bjorn Helgaas <bjorn.helgaas@hp.com>
> > Patch               :
> http://marc.info/?l=linux-kernel&m=122246533505643&w=4
> 
> The structural patch for this from Bjorn got NACKed. AFAIK we're still 
> waiting for someone (Bjorn?) to decide whether to go with a simpler patch 
> from Rene for .27 and to push that.
> 
> For me it was possible to work around the issue by changing a BIOS 
> setting, but I expect it will still affect others with similar BIOS 
> behavior.
Comment 6 Rafael J. Wysocki 2008-10-26 10:33:50 UTC
On Sunday, 26 of October 2008, Frans Pop wrote:
> On Saturday 25 October 2008, Rafael J. Wysocki wrote:
> > Bug-Entry   : http://bugzilla.kernel.org/show_bug.cgi?id=11550
> > Subject     : pnp: Huge number of "io resource overlap" messages
> 
> AFAIK the issue should still be listed.
Comment 7 Rafael J. Wysocki 2008-11-02 11:20:59 UTC
Not-Handled-By : Rene Herman <rene.herman@keyaccess.nl>
Comment 8 Frans Pop 2008-11-07 01:56:24 UTC
References: http://lkml.org/lkml/2008/11/7/127

Issue was fixed in 2.6.28-rc3, most likely by:
commit 1f98757776eafe31065be9118db6051afcf8643c
Author: Linus Torvalds <torvalds@linux-foundation.org>
Date:   Sat Nov 1 10:17:22 2008 -0700
    x86: Clean up late e820 resource allocation
Comment 9 Frans Pop 2009-03-07 17:18:51 UTC
It turns out that my test was incorrect, so the issue is not fixed.
Not reopening the BR as there's no need to track this as a regression anymore.

References : http://lkml.org/lkml/2009/3/4/298

Note You need to log in before you can comment on or make changes to this bug.